--- a/Innobedded.KrankenHause.WebSite/Resources/Resource.de.resx
+++ b/Innobedded.KrankenHause.WebSite/Resources/Resource.de.resx
@@ -118,49 +118,49 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="aboutus" xml:space="preserve">
-    <value>About Us</value>
+    <value>Über Uns</value>
   </data>
   <data name="appointment" xml:space="preserve">
-    <value>Make an appointment</value>
+    <value>einen Termin machen</value>
   </data>
   <data name="clinics" xml:space="preserve">
-    <value>Clinics</value>
+    <value>Kliniks</value>
   </data>
   <data name="contact" xml:space="preserve">
-    <value>Contact</value>
+    <value>Kontakt</value>
   </data>
   <data name="doctors" xml:space="preserve">
-    <value>Doctors</value>
+    <value>Ärzt*innen</value>
   </data>
   <data name="home" xml:space="preserve">
-    <value>Home</value>
+    <value>House</value>
   </data>
   <data name="services" xml:space="preserve">
-    <value>Services</value>
+    <value>Dienstleistungen</value>
   </data>
   <data name="slide1body" xml:space="preserve">
-    <value>Healthy Living</value>
+    <value>Gesundes Leben</value>
   </data>
   <data name="slide1link" xml:space="preserve">
-    <value>Meet Our Doctors</value>
+    <value>Treffen Sie unsere Ärzte</value>
   </data>
   <data name="slide1title" xml:space="preserve">
-    <value>Let's make your life happier</value>
+    <value>Lassen Sie uns Ihr Leben glücklicher machen</value>
   </data>
   <data name="slide2body" xml:space="preserve">
-    <value>New Lifestyle</value>
+    <value>Neuer Lebensstil</value>
   </data>
   <data name="slide2link" xml:space="preserve">
-    <value>More About Us</value>
+    <value>Mehr über uns</value>
   </data>
   <data name="slide2title" xml:space="preserve">
     <value>Aenean luctus lobortis tellus</value>
   </data>
   <data name="slide3body" xml:space="preserve">
-    <value>Your Health Benefits</value>
+    <value>Ihre gesundheitlichen Vorteile</value>
   </data>
   <data name="slide3link" xml:space="preserve">
-    <value>Read Stories</value>
+    <value>Geschichten lesen</value>
   </data>
   <data name="slide3title" xml:space="preserve">
     <value>Pellentesque nec libero nisi</value>
