--- a/Innobedded.KrankenHause.WebSite/Resources/Resource.fa.resx
+++ b/Innobedded.KrankenHause.WebSite/Resources/Resource.fa.resx
@@ -118,51 +118,51 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="aboutus" xml:space="preserve">
-    <value>About Us</value>
+    <value>درباره ما</value>
   </data>
   <data name="appointment" xml:space="preserve">
-    <value>Make an appointment</value>
+    <value>رزرو نوبت</value>
   </data>
   <data name="clinics" xml:space="preserve">
-    <value>Clinics</value>
+    <value>کلینیک</value>
   </data>
   <data name="contact" xml:space="preserve">
-    <value>Contact</value>
+    <value>ارتباط با ما</value>
   </data>
   <data name="doctors" xml:space="preserve">
-    <value>Doctors</value>
+    <value>دکترها</value>
   </data>
   <data name="home" xml:space="preserve">
-    <value>Home</value>
+    <value>خانه اصلی</value>
   </data>
   <data name="services" xml:space="preserve">
-    <value>Services</value>
+    <value>خدمات</value>
   </data>
   <data name="slide1body" xml:space="preserve">
-    <value>Healthy Living</value>
+    <value>زندگی سالم</value>
   </data>
   <data name="slide1link" xml:space="preserve">
-    <value>Meet Our Doctors</value>
+    <value>ملاقات با دکترها</value>
   </data>
   <data name="slide1title" xml:space="preserve">
-    <value>Let's make your life happier</value>
+    <value>زندگی خوشبختی است</value>
   </data>
   <data name="slide2body" xml:space="preserve">
-    <value>New Lifestyle</value>
+    <value>سیستم نوین</value>
   </data>
   <data name="slide2link" xml:space="preserve">
-    <value>More About Us</value>
+    <value>الکی مثلا</value>
   </data>
   <data name="slide2title" xml:space="preserve">
-    <value>Aenean luctus lobortis tellus</value>
+    <value>همه چی عالی</value>
   </data>
   <data name="slide3body" xml:space="preserve">
-    <value>Your Health Benefits</value>
+    <value>ما خوبیم</value>
   </data>
   <data name="slide3link" xml:space="preserve">
-    <value>Read Stories</value>
+    <value>بیا ببین</value>
   </data>
   <data name="slide3title" xml:space="preserve">
-    <value>Pellentesque nec libero nisi</value>
+    <value>که چه خب</value>
   </data>
 </root>
